# hw06-raymondw2

./: GW150914_data.csv  Makefile  README.md  _config.yml  conf.py  genindex.html  index.html  index.ipynb  search.html  searchindex.js  setup.cfg
.doctrees/ligotools/.pytest_cache/: README.doctree
.ipynb_checkpoints/: Makefile-checkpoint  _config-checkpoint.yml  environment-checkpoint.yml  index-checkpoint.ipynb  setup-checkpoint.cfg
_build/.doctrees/: README.doctree  environment.pickle  index.doctree
_build/.doctrees/.pytest_cache/: README.doctree
_build/.doctrees/book/: index.doctree
_build/html/: .buildinfo  README.html  genindex.html  hw06-description.html  index.html  objects.inv  search.html  searchindex.js
_build/html/.doctrees/: README.doctree  hw06-description.doctree
_build/html/.ipynb_checkpoints/: index-checkpoint.html
_build/html/.pytest_cache/: README.html
_build/html/_sources/: README.md
_build/jupyter_execute/: index.ipynb  index.py
_build/jupyter_execute/book/: index.ipynb  index.py
book/: conf.py  index.html
book/_build/.doctrees/: environment.pickle  index.doctree
book/_build/html/: .buildinfo  genindex.html  index.html  search.html  searchindex.js
book/_build/jupyter_execute/: index.ipynb
books/: _config.yml
books/_build/.doctrees/: environment.pickle  index.doctree
books/_build/html/: genindex.html  index.html  search.html
books/_build/jupyter_execute/: index.ipynb
docs/html/: README.html  hw06-description.html  index.html
ligotools/.ipynb_checkpoints/: utils-checkpoint.py
ligotools/tests/: test_readligo.py
(+13 files in other folders)
