[metadata]
name = ligotools
version = attr: ligotools.__version__
author = Ligo Scientific Collaboration (LSC) and Raymond Wang
author_email = raymondwang@berkeley.edu
description = A package for accessing the LIGO files 
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 2.7
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >= 2

[options.packages.find]
where = src